fixing header and footer on tablet

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -262,7 +262,7 @@ form button:hover {
         grid-column: 2;
         gap: 20px;
         margin-top: 20px;
-        margin-left: 375px;
+        margin-left: 300px;
         justify-items: center;
         margin-bottom: 30px;
         width: 100%;
